-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

TBBlue: Fixed writing on divmmc memory when layer2 active

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

Fixed loading General Sound rom

Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks


Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots
Added configuration & command line setting to save keymap type
Added some file converters: from SNA, SP, Z80, P, ZSF to SCR 


Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Added F-key to close all open menus
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values